Add new book button

--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
     <title>Library</title>
 </head>
 <body>
+    <section class="top-section">
+        <h1 style="font-family: inter;">Library of Alexandria</h1>
+        <button class="new-book">New Book</button>
+    </section>
+    <section class="card-container"></section>
 </body>
 </html>
