Add new book input dialog

--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
         <h1 style="font-family: inter;">Library of Alexandria</h1>
         <button class="new-book">New Book</button>
     </section>
+    <dialog class="new-book-dialog">
+        <form  method = 'dialog'id="my-form">
+            <label for="title">Title:</label>
+            <input type="text" name="title" id="title">
+            <label for="author">Author:</label>
+            <input type="text" name="author" id="author">
+            <label for="pages">No. of pages:</label>
+            <input type="text" name="pages" id="pages">
+            <label for="read">Read:</label>
+            <input type="text" name="read" id="read">
+           <div class="button-container"> <button class="black-button dialog-submit" type="submit">Save</button>
+        </form>
+    </dialog>
     <section class="card-container"></section>
 </body>
 </html>
