--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button class="new-book">New Book</button>
     </section>
     <dialog class="new-book-dialog">
-        <form  method = 'dialog'id="my-form">
+        <form  method = 'dialog'id="new-book-form">
             <label for="title">Title:</label>
             <input type="text" name="title" id="title">
             <label for="author">Author:</label>
