--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
             <label for="author">Author:</label>
             <input type="text" name="author" id="author">
             <label for="pages">No. of pages:</label>
-            <input type="text" name="pages" id="pages">
+            <input type="number" value="0" min="0" max="1000" name="pages" id="pages">
             <label for="read">Read:</label>
-            <input type="text" name="read" id="read">
+            <input type="radio" name="read" value="Yes" id="read">
+            <label for="read">Yes</label>
+            <input type="radio" name="read" value='No' id="not-read">
+            <label for="not-read">No</label>
            <div class="button-container"> <button class="black-button dialog-submit" type="submit">Save</button>
         </form>
     </dialog>
