Change card identifiers font family & weight

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <section class="top-section">
-        <h1 style="font-family: inter;">Library of Alexandria</h1>
+        <h1>Library of Alexandria</h1>
         <button class="new-book">New Book</button>
     </section>
     <dialog class="new-book-dialog">
