--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
     <title>Library</title>
 </head>
 <body>
-    <section class="top-section">
-        <h1>Library of Alexandria</h1>
-        <button class="new-book">New Book</button>
-    </section>
+    
+    <div class="header">
+        <section class="top-section">
+            <h1>Library of Alexandria</h1>
+            <button class="new-book">New Book</button>
+        </section>
+        <a href="https://github.com/medium-sofy" class="medium">by mediumsofy</a>    
+    </div>
     <dialog class="new-book-dialog">
         <form  method = 'dialog'id="new-book-form">
             <label for="title">Title:</label>
