--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     <dialog class="new-book-dialog">
         <form  method = 'dialog'id="new-book-form">
             <label for="title">Title:</label>
-            <input type="text" name="title" id="title">
+            <input type="text" name="title" id="title" required>
             <label for="author">Author:</label>
-            <input type="text" name="author" id="author">
+            <input type="text" name="author" id="author" required>
             <label for="pages">No. of pages:</label>
-            <input type="number" value="0" min="0" max="1000" name="pages" id="pages">
+            <input type="number"  min='30' max="1000" name="pages" id="pages" required>
             <label for="read">Read:</label>
-            <input type="radio" name="read" value="Yes" id="read">
+            <input type="radio" name="read" value="Yes" id="read" required>
             <label for="read">Yes</label>
             <input type="radio" name="read" value='No' id="not-read">
             <label for="not-read">No</label>
